--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+@theme {
+  --font-sans: 'Roboto', sans-serif;
+}
